--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 .main_background {
   background-image: url(../images/bliss_main_bg.jpg);
   background-position: center bottom;
@@ -23,7 +24,7 @@ background: linear-gradient(to right, #3F5EFB, #FC466B); /* W3C, IE 10+/ Edge, F
   background: #111111;  /* fallback for old browsers */
 }
 .sponser-card {
-  height: 18rem;
+  height: auto;
 }
 
 .nav-link {
@@ -82,7 +83,7 @@ input[type=checkbox]:checked + span:after {
   font-size: 20px;
   color: #6ab5a8;
 }
- 
+
 input[type=radio],
 input[type=checkbox] {
 	/*hide the radio button*/
@@ -111,14 +112,14 @@ input[type="radio"] {
   width: 1em;
   -moz-appearance: none;
   -webkit-appearance: none;
-  
+
 }
 
 input[type="radio"]:checked {
     background-color: grey;
     box-shadow: inset 0 0 0 .1875em white;
-    -webkit-transition: background .15s, box-shadow .1s; 
-    transition: background .15s, box-shadow .1s; 
+    -webkit-transition: background .15s, box-shadow .1s;
+    transition: background .15s, box-shadow .1s;
 }
 #wrap_a {
   max-width: 800px;
@@ -306,3 +307,14 @@ input[type="radio"]:checked {
 
 .resp-sharing-button--telegram:hover {
   background-color: #4B97D1;}
+
+@media (min-width: 768px) {
+  #cv_top_pt {
+    padding-top: 25vh;
+  }
+
+  .mq-addmx {
+    margin-right: 0.75rem;
+  }
+}
+
